Archive2/b8/2e34a43d85dce3/output
main.cpp: In function 'int main()':
main.cpp:7:23: error: extended initializer lists only available with -std=c++11 or -std=gnu++11
     std::vector<int> v{2, 4, 2, 0, 5, 10, 7, 3, 7, 1}; 
                       ^
main.cpp:7:53: error: in C++98 'v' must be initialized by constructor, not by '{...}'
     std::vector<int> v{2, 4, 2, 0, 5, 10, 7, 3, 7, 1}; 
                                                     ^
main.cpp:7:53: error: no matching function for call to 'std::vector<int>::vector(<brace-enclosed initializer list>)'
In file included from /usr/local/include/c++/5.1.0/vector:64:0,
                 from main.cpp:1:
/usr/local/include/c++/5.1.0/bits/stl_vector.h:407:9: note: candidate: template<class _InputIterator> std::vector<_Tp, _Alloc>::vector(_InputIterator, _InputIterator, const allocator_type&)
         vector(_InputIterator __first, _InputIterator __last,
         ^
/usr/local/include/c++/5.1.0/bits/stl_vector.h:407:9: note:   template argument deduction/substitution failed:
main.cpp:7:53: note:   cannot convert '2' (type 'int') to type 'const allocator_type& {aka const std::allocator<int>&}'
     std::vector<int> v{2, 4, 2, 0, 5, 10, 7, 3, 7, 1}; 
                                                     ^
In file included from /usr/local/include/c++/5.1.0/vector:64:0,
                 from main.cpp:1:
/usr/local/include/c++/5.1.0/bits/stl_vector.h:318:7: note: candidate: std::vector<_Tp, _Alloc>::vector(const std::vector<_Tp, _Alloc>&) [with _Tp = int; _Alloc = std::allocator<int>]
       vector(const vector& __x)
       ^
/usr/local/include/c++/5.1.0/bits/stl_vector.h:318:7: note:   candidate expects 1 argument, 10 provided
/usr/local/include/c++/5.1.0/bits/stl_vector.h:303:7: note: candidate: std::vector<_Tp, _Alloc>::vector(std::vector<_Tp, _Alloc>::size_type, const value_type&, const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::size_type = long unsigned int; std::vector<_Tp, _Alloc>::value_type = int; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(size_type __n, const value_type& __value = value_type(),
       ^
/usr/local/include/c++/5.1.0/bits/stl_vector.h:303:7: note:   candidate expects 3 arguments, 10 provided
/usr/local/include/c++/5.1.0/bits/stl_vector.h:264:7: note: candidate: std::vector<_Tp, _Alloc>::vector(const allocator_type&) [with _Tp = int; _Alloc = std::allocator<int>; std::vector<_Tp, _Alloc>::allocator_type = std::allocator<int>]
       vector(const allocator_type& __a) _GLIBCXX_NOEXCEPT
       ^
/usr/local/include/c++/5.1.0/bits/stl_vector.h:264:7: note:   candidate expects 1 argument, 10 provided
/usr/local/include/c++/5.1.0/bits/stl_vector.h:253:7: note: candidate: std::vector<_Tp, _Alloc>::vector() [with _Tp = int; _Alloc = std::allocator<int>]
       vector()
       ^
/usr/local/include/c++/5.1.0/bits/stl_vector.h:253:7: note:   candidate expects 0 arguments, 10 provided
main.cpp:10:17: error: range-based 'for' loops only available with -std=c++11 or -std=gnu++11
     for (int n: v)
                 ^
main.cpp:15:10: warning: 'auto' changes meaning in C++11; please remove it [-Wc++0x-compat]
     for (auto i = v.begin(); i != v.end(); ++i) {
          ^
main.cpp:15:15: error: 'i' does not name a type
     for (auto i = v.begin(); i != v.end(); ++i) {
               ^
main.cpp:15:30: error: expected ';' before 'i'
     for (auto i = v.begin(); i != v.end(); ++i) {
                              ^
main.cpp:15:30: error: 'i' was not declared in this scope
main.cpp:20:17: error: range-based 'for' loops only available with -std=c++11 or -std=gnu++11
     for (int n: v)
                 ^
main.cpp:28:17: error: range-based 'for' loops only available with -std=c++11 or -std=gnu++11
     for (int n: v)
                 ^
main.cpp:36:17: error: range-based 'for' loops only available with -std=c++11 or -std=gnu++11
     for (int n: v)
                 ^
